doc/examples/boost_test_macro_sequence.output
//[example_output
> ./test_boost_test_macro_sequence --log_level=all
Running 1 test case...
Entering test module "boost_test_sequence"
boost_test_macro_sequence.cpp:13: Entering test case "test_collections_vectors"
boost_test_macro_sequence.cpp:18: error: in "test_collections_vectors": check a == b has failed. 
Mismatch at position 1: 2 != 5. 
boost_test_macro_sequence.cpp:19: info: check a != b has passed
boost_test_macro_sequence.cpp:20: info: check a <= b has passed
boost_test_macro_sequence.cpp:21: error: in "test_collections_vectors": check b < c has failed. Collections size mismatch: 3 != 4
boost_test_macro_sequence.cpp:22: error: in "test_collections_vectors": check b >= c has failed. Collections size mismatch: 3 != 4
boost_test_macro_sequence.cpp:23: info: check b != c has passed
boost_test_macro_sequence.cpp:13: Leaving test case "test_collections_vectors"; testing time: 656mks
Leaving test module "boost_test_sequence"; testing time: 801mks

*** 3 failures are detected in the test module "boost_test_sequence"
//]
